--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;700;800&family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <title>React Template</title>
+  <title>Habby: Habit Tracker</title>
 </head>
 
 <body>
